--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "diploma-frontend",
   "main": "src/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
+    "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
   },
