--- a/package.json
+++ b/package.json
@@ -19,33 +19,33 @@
   },
   "homepage": "https://github.com/yletfull/news-explorer-frontend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "autoprefixer": "^9.7.6",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
-    "cssnano": "^4.1.10",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "file-loader": "^6.0.0",
+    "@babel/cli": "~7.8.4",
+    "@babel/core": "~7.9.6",
+    "@babel/preset-env": "~7.9.6",
+    "autoprefixer": "~9.7.6",
+    "babel-loader": "~8.1.0",
+    "cross-env": "~7.0.2",
+    "css-loader": "~3.5.3",
+    "cssnano": "~4.1.10",
+    "eslint-config-airbnb-base": "~14.2.0",
+    "eslint-plugin-import": "~2.22.0",
+    "file-loader": "~6.0.0",
     "gh-pages": "~2.0.1",
-    "html-webpack-plugin": "^4.3.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
+    "html-webpack-plugin": "~4.3.0",
+    "image-webpack-loader": "~6.0.0",
+    "mini-css-extract-plugin": "~0.9.0",
+    "optimize-css-assets-webpack-plugin": "~5.0.3",
+    "postcss-loader": "~3.0.0",
+    "style-loader": "~1.2.1",
+    "url-loader": "~4.1.0",
+    "webpack": "~4.43.0",
+    "webpack-cli": "~3.3.11",
+    "webpack-dev-server": "~3.11.0",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^3.4.1",
-    "eslint": "^7.6.0"
+    "babel-polyfill": "~6.26.0",
+    "core-js": "~3.4.1",
+    "eslint": "~7.6.0"
   }
 }
