--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,14 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": [2 , { "allow": ["_id"] }],
-    "linebreak-style": [0]
+    "linebreak-style": [0],
+    "no-undef": [0],
+    // "prefer-promise-reject-errors": [0],
+    // "class-methods-use-this": [0],
+    // "no-restricted-globals": [0],
+    // "func-names": [0],
+    // "no-loop-func": [0],
+    // "no-restricted-syntax": [0]
   }
 
 }
