--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "babel-polyfill": "~6.26.0",
     "core-js": "~3.4.1",
-    "eslint": "~7.6.0"
+    "eslint": "~7.6.0",
+    "validator": "^13.1.1"
   }
 }
