--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,20 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 107.172.142.144;
 
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location / {
+        allow all;
         proxy_pass http://backend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_method POST;
     }
 
     error_page 500 502 503 504 /50x.html;
