--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location / {
+    location /api {
         allow all;
         proxy_pass http://backend:3000;
         proxy_set_header Host $host;
