--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ server {
     }
 
     location /api {
+        rewrite ^/api/(.*) /$1 break;  # Убираем /api из пути перед проксированием
         allow all;
         proxy_pass http://backend:3000;
         proxy_set_header Host $host;
