--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 107.172.142.144;
+    server_name localhost;
 
     location / {
         root /usr/share/nginx/html;
@@ -8,14 +8,12 @@ server {
     }
 
     location /api {
-        rewrite ^/api/(.*) /$1 break;  # Убираем /api из пути перед проксированием
         allow all;
-        proxy_pass http://backend:3000;
+        rewrite ^/api/(.*) /$1 break;  # Убираем /api из пути перед проксированием
+        proxy_pass http://backend:3000;  # Проксируем на бэкенд с динамическим IP-адресом
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_method POST;
     }
 
     error_page 500 502 503 504 /50x.html;
