--- a/nginx.conf
+++ b/nginx.conf
@@ -2,18 +2,19 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /api {
+     location /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
         allow all;
-        rewrite ^/api/(.*) /$1 break;  # Убираем /api из пути перед проксированием
-        proxy_pass http://backend:3000;  # Проксируем на бэкенд с динамическим IP-адресом
+        proxy_pass http://backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_method GET POST;
+    }
+
+     location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
 
     error_page 500 502 503 504 /50x.html;
