--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 107.172.142.144;
 
     location / {
         root /usr/share/nginx/html;
