--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name localhost;
     server_name 107.172.142.144;
 
     location / {
@@ -7,7 +8,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-     location /api/ {
+     location /api {
         rewrite ^/api/(.*)$ /$1 break;
         allow all;
         proxy_pass http://backend:3000;
